Design do site alterado tentativa de inclusação de barra de navegação

--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
     <script src='main.js'></script>
 </head>
 <body>
- <nav>
-        <span>opção 1</span>
-
- </nav>
+    <ul class="navbar">
+        <h1 class="icon">Vinícius</h1>
+        <h3 class="subicon">Lemes</h3>
+        <li class="nav-item"><a href="#">Página inicial</a></li>
+        <li class="nav-item"><a href="#">Sobre mim</a></li>
+        <li class="nav-item"><a href="#">Contatos</a></li>
+    </ul>
  <div class="inicial">
     <div class="descricao">
-        <p>testando descrição</p>
-    </div>
-    <div class="imginicial">
-    <p>testando div</p>
+        <div class="texto">
+        <h2>Hello there!</h2>        <br/><br/>
+        <p>My name is Vinicius Lemes<br/>
+        I'm from Brazil and I'm 19 years old,<br/>
+        i am a student in the field of Information Technology<br/></p>
+        </div>
+        <div class="imginicial">
+        </div>
     </div>
  </div>
  <div class="mais">
