background ajustado pagina principal semipronta

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <ul class="navbar">
-        <h1 class="icon">Vinícius</h1>
-        <h3 class="subicon">Lemes</h3>
-        <li class="nav-item"><a href="#">Página inicial</a></li>
-        <li class="nav-item"><a href="#">Sobre mim</a></li>
-        <li class="nav-item"><a href="#">Contatos</a></li>
-    </ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="#habilidades">News</a></li>
+        <li><a href="https://linktr.ee/vinicius_lemes">Contact</a></li>
+        <li style="float:right"><a href="testenavbar.html">About</a></li>
+      </ul>
+      
  <div class="inicial">
+    <div class="stars" ></div>
+    <div class="stars2" ></div>
     <div class="descricao">
         <div class="texto">
         <h2>Hello there!</h2>        <br/><br/>
@@ -26,13 +28,22 @@
         </div>
         <div class="imginicial">
         </div>
+     </div>
+</div>
+ <div class="mais">
+    <div class="divmais" id="habilidades" style="color: aliceblue;"><h2>Skills</h2>
+    <ul class="lista">
+        <li class="skill"><a> HTML/CSS</a></li>
+        <li class="skill"><a> SQL/PostGreeSql</a></li>
+        <li class="skill"><a> Java/Python</a></li>
+        <li class="skill"><a> Javascript</a></li>
+        <li class="skill"><a> UI/UX</a></li>
+    </ul>
     </div>
  </div>
- <div class="mais">
-    <p>testando div</p>
- </div>
 <div class="rodape">
-<p>teste rodapé</p>
+<p>Vinicius | Franca-Sp</p>
+<p>2023 (This website is subject to change, it does not correspond to its final version)</p>
 </div>
 </body>
 </html>
