--- a/testenavbar.html
+++ b/testenavbar.html
@@ -17,5 +17,6 @@
         <div class="stars" ></div>
         <div class="stars2" ></div>
       </div>
+      <div class="about"></div>
 </body>
 </html>
