Inclusão de estilo e barra de navegação

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <ul class="navbar">
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="#habilidades">News</a></li>
+        <li><a href="#habilidades">Skills</a></li>
         <li><a href="https://linktr.ee/vinicius_lemes">Contact</a></li>
         <li style="float:right"><a href="testenavbar.html">About</a></li>
       </ul>
