--- a/testenavbar.html
+++ b/testenavbar.html
@@ -16,7 +16,14 @@
       <div class="container" >
         <div class="stars" ></div>
         <div class="stars2" ></div>
+        <div class="about">
+          <h1>Sobre mim</h1>
+          <p>Minha carreira na área de tecnologia teve inicio em 2019 quando ingressei no curso de desenvolvimentos de sistemas na Etec Dr. Júlio Cardoso (industrial), durante minha tragetória se iniciou a pandemia o que adiou dias de aulas do segundo colegial, me formei em 2021 quando as aulas estavam voltando a se tornar presenciais. Em 2022 ingressei como jovem aprendiz no cargo de analista de suporte na Usina de Laticínios Jussara, entrando em 2023 saí da Jussara e passei no vestibular da Fatec Dr. Thomaz Novelino, na qual estou cursando atualmente, procuro me tornar um Dev e futuramente abrir meu proprio negócio, focado na área de dados. Fiz este meu primeiro site como um protótipo de um portfolio na qual pretendo melhorar futuramente.<p>
+          <h2>Curiosidades</h2>
+          <p>Minha série favorita de livros é Sherlock Holmes</br>
+              Meu pokemon favorito é a Gardevoair</br>
+                Amo jogos de tabuleiro e estratégia</p>
+        </div>
       </div>
-      <div class="about"></div>
 </body>
 </html>
