--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="#habilidades">Skills</a></li>
         <li><a href="https://linktr.ee/vinicius_lemes">Contact</a></li>
-        <li style="float:right"><a href="testenavbar.html">About</a></li>
+        <li style="float:right"><a href="about.html">About</a></li>
       </ul>
       
  <div class="inicial">
