--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>panda mechanics</title>
+    <title>Portfolio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="imagem/png" href="https://png.pngtree.com/png-vector/20191026/ourlarge/pngtree-cat-face-glyph-icon-vector-png-image_1874311.jpg" />
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
