--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>pagina de teste</title>
+    <title>About</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="icon" type="imagem/png" href="https://png.pngtree.com/png-vector/20191026/ourlarge/pngtree-cat-face-glyph-icon-vector-png-image_1874311.jpg" />
 </head>
 <body>
     <ul>
